2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* src/ephy-dbus.c: (ephy_dbus_connect_to_session_bus):
	
	Fix error condition check.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* data/mime-types-permissions.xml:

	Add more mime types.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* lib/ephy-node.c: (destroy_signal_data), (node_parent_free),
	(ephy_node_destroy), (ephy_node_new_with_id), (real_set_property),
	(ephy_node_set_property), (ephy_node_set_property_string),
	(ephy_node_set_property_boolean), (ephy_node_set_property_long),
	(ephy_node_set_property_int), (ephy_node_set_property_double),
	(ephy_node_set_property_float), (real_add_child),
	(ephy_node_new_from_xml), (ephy_node_signal_connect_object):

	Convert EphyNode to use GSlice.

2007-01-28  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/ContentHandler.cpp: (GContentHandler::Show):

	Check for a potential veto. Fix #342951.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* lib/ephy-node.c: (safe_write_string), (ephy_node_write_to_xml):
	* src/bookmarks/ephy-bookmarks-export.c: (sanitise_string),
	(write_topics_list), (write_rdf):

	Make sure we don't write characters < 0x20 (except 0x9, 0xa, 0xd) to
	XML. Bug #392782.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* src/epiphany.defs:
	* src/epiphany.override:

	Fix the wrapping of the singleton Ephy[Embed]Shell as
	"epiphany.Shell()". Bug #351705.

2007-01-28  Christian Persch  <chpe@svn.gnome.org>

	* data/Makefile.am:

	Fix schemas install command.

2007-01-27  Priit Laes  <plaes@svn.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:

	Fixes the menu path of Gnome control center when displaying the service 
	unavailable error message. Bug #352923.

2007-01-24  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:

	Changed the "redirected too many times" error page to be more
	friendly. Bug #395990.

2007-01-23  Christian Persch  <chpe@svn.gnome.org>
