@@ -1,5 +1,11 @@
 2007-01-28  Christian Persch  <chpe@svn.gnome.org>
 
+	* data/default-prefs-common.js:
+
+	Set bidi caret movement pref to mimick gtk widgets.
+
+2007-01-28  Christian Persch  <chpe@svn.gnome.org>
+
 	* src/ephy-dbus.c: (ephy_dbus_connect_to_session_bus):
 	
 	Fix error condition check.
